--- a/NHapp/build.gradle
+++ b/NHapp/build.gradle
@@ -26,7 +26,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0'
     implementation 'com.google.android.material:material:1.3.0-alpha02'
-    implementation project(':androidwversionmanager')
     implementation 'org.thoughtcrime.ssl.pinning:AndroidPinning:1.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'joda-time:joda-time:2.10.4'
@@ -36,12 +35,14 @@ dependencies {
 
 android {
 
-    compileSdkVersion 29
-    buildToolsVersion '29.0.3'
-
+    compileSdkVersion 30
+    buildToolsVersion '30.0.2'
+    useLibrary 'org.apache.http.legacy'
+    useLibrary 'org.apache.http.conn.scheme.SchemeRegistry'
     dataBinding {
         enabled = true
     }
+
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -49,11 +50,11 @@ android {
     }
 
     defaultConfig {
-        minSdkVersion 17
-        targetSdkVersion 29
+        minSdkVersion 27
+        targetSdkVersion 30
         //noinspection HighAppVersionCode
-        versionCode 2020030300
-        versionName "2020.3"
+        versionCode 162
+        versionName "1.6.2"
         multiDexEnabled true
     }
 
